  see: http://mjrnet.org/pinscape/OpenPinballDevice/NewPinCabInput.htm, http://mjrnet.org/pinscape/OpenPinballDevice/OpenPinballDeviceHID.htm
   1) velocity-based nudge input
   2) plunger speed input
   3) Open Pinball Device HID interface

FIXES:

- fix analogue nudge not working for joysticks/gamepads in XInput mode

- fix wrong keyboard characters in dialogs for non QWERTY keyboards

- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- fix longstanding textbox font size bug

- fix noise on small-scaled DMDs (e.g. on FSS setups)

- fix longstanding bug in the bilateral CAS filter

- fix swapped red & blue channels when exporting from BMPs

- fix Light Debugger dialog 2nd color button

- improve script editing performance again

- fix crash if sound card(s) hardware/driver setup changed

- fix crash on tables with weird table info

- fix out of memory crashes (Video capture and Image Manager)

- fix wrong detection of alpha when loading BMPs stored in .vpx

- fix potential multi-threading screw-up when loading textures

- fix saving of custom keys for joypad input

- fix changing the timer settings not marking the table as dirty

- fix 'paste at' (and others) coordinates

- fix deleting of sub part included in a collection warning

- fix .bmp export in the Image Manager

- fix Image manager overwriting alpha mask value for selected images on import

- fix gate two-way flag import from VP9/8 .vpts

- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.7.3 Changelog
------------------------

FIXES:

- fix missing render updates when debugging/changing parameters in pause mode (10.7.0 regression)

- show bulb in UI/viewport

- fix potentially wrong primitive animation interpolation
- fix primitive animations getting stuck
- fix primitive animation speed being dependent on the framerate

- fix material list combobox not updating
