@@ -31,20 +31,25 @@
 #define USHOCKTYPE_VIRTUAPIN  4
 #define USHOCKTYPE_GENERIC    5
 
+// Input type ID - keyboard
 #define APP_KEYBOARD   0
-#define APP_JOYSTICKMN 1
-#define APP_MOUSE      2
 
+// Input type ID - mouse
+#define APP_MOUSE      1
+
+// Input type ID - joystick 1 through 4
 // handle multiple joysticks, APP_JOYSTICKMN..APP_JOYSTICKMX
+#define APP_JOYSTICKMN 2
 #define PININ_JOYMXCNT 4
+#define APP_JOYSTICK(n) (APP_JOYSTICKMN + (n))
+#define APP_JOYSTICKMX  (APP_JOYSTICK(PININ_JOYMXCNT - 1))
 
+
+// Joystick axis normalized input range
 #define JOYRANGEMN (-65536)
 #define JOYRANGEMX (+65536)
-
 #define JOYRANGE ((JOYRANGEMX) - (JOYRANGEMN) + 1)
 
-#define APP_JOYSTICKMX (APP_JOYSTICKMN + PININ_JOYMXCNT -1)
-#define APP_JOYSTICK(n) (APP_JOYSTICKMN + (n))
 
 #define USE_DINPUT_FOR_KEYBOARD // can lead to less input lag maybe on some systems if disabled, but can miss input if key is only pressed very very quickly and/or FPS are low
 
