@@ -17,6 +17,8 @@ FIXES:
 
 - fix wrong keyboard characters in dialogs for non QWERTY keyboards
 
+- fix using multiple joypads/sticks in combination with a touchscreen and/or the mouse
+
 - fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player
 
 - fix longstanding textbox font size bug
@@ -1240,6 +1242,8 @@ VP 9.9.5c Changelog
    3) Open Pinball Device HID interface
 
 - fix issue where saving a table can cost up to 4x (8x on 64bit) the temporary memory
+
+- fix using multiple joypads/sticks in combination with a touchscreen and/or the mouse
 
 VP 9.9.5b Changelog
 ------------------------
